# ERPBiometric-Sync

./: README.md  pyproject.toml
.github/workflows/: ci.yml
erpbiometric_sync/: hooks.py  modules.txt
erpbiometric_sync/erpbiometric_sync/doctype/biometric_data_staging/: biometric_data_staging.js  biometric_data_staging.json  biometric_data_staging.py  test_biometric_data_staging.py
