[project]
name = "erpbiometric_sync"
authors = [
    { name = "Joshua Joseph Michael", email = "joshuajmichael255@gmail.com"}
]
description = "ERPBiometric Sync is a Frappe application designed to seamlessly integrate biometric data with ERPNext. This app aims to enhance your ERP system's functionality by enabling efficient synchronization of biometric data, ensuring accurate and timely updates."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
